--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,16 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	springCloudVersion = 'Dalston.SR4'
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 	compile ("org.springframework.boot:spring-boot-starter-actuator")
+	compile("org.springframework.cloud:spring-cloud-starter-eureka")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	// Jackson Dependencies
 	compile "com.fasterxml.jackson.core:jackson-annotations"
@@ -46,4 +50,10 @@ dependencies {
 	runtime "com.fasterxml.jackson.datatype:jackson-datatype-jdk8"
 	runtime "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
 	runtime "com.fasterxml.jackson.module:jackson-module-kotlin"
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
