--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 	compile ("org.springframework.boot:spring-boot-starter-actuator")
 	compile("org.springframework.cloud:spring-cloud-starter-eureka")
 	compile("org.springframework.cloud:spring-cloud-starter-hystrix")
+	compile("org.springframework.cloud:spring-cloud-starter-hystrix-dashboard")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	// Jackson Dependencies
 	compile "com.fasterxml.jackson.core:jackson-annotations"
